tests/error/14.program
{
    a_s = "0123456789";
    a_s[0:5] = a_s[0:5];
}